--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    namespace 'com.mishka.note'
+    namespace 'com.laba.note'
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.mishka.note"
+        applicationId "com.laba.note"
         minSdk 24
         targetSdk 34
         versionCode 1
